# llm-app

./: package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/lib/cuda-backend/: Cargo.toml
src-tauri/lib/vulkan-backend/: Cargo.toml
src-tauri/src/: generator.rs  lib.rs  main.rs  model.rs  models.rs  token_output_stream.rs
src/app/dashboard/: page.tsx
src/components/: app-sidebar.tsx
